fixed usercard spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -199,7 +199,7 @@ a {
 
 .user-card {
   display: flex;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
   color: var(--light);
   background-color: var(--faded);
